plugins/kotlin/idea/tests/testData/mppCreationOfModulesAndServices/sharedLinux/sharedLinux.kt
expect class <!NO_ACTUAL_FOR_EXPECT!>Shared<!>

actual typealias Common = Shared